<?xml version="1.0"?>
<package format="2">
  <name>robot_wheel_odometry</name>
  <version>1.0.0</version>
  <description>The robot_wheel_odometry package</description>

  <maintainer email="fiderekblazej@gmail.com">blazej</maintainer>
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
